fix for Safari on Mac - cropped icons

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
@@ -290,6 +290,11 @@
 	padding: 0.37em 0.0em 0.0em 0.0em;
 }
 
+.sectionTool {	/* used in View Item */
+	margin-top:0.0909em;
+	padding-top:0.0909em;
+}
+
 .fullItem .lineToolSection, .fullItem .sectionToolSection {
 	float: right;
 	padding-top: 0px;
