--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
@@ -804,10 +804,11 @@ body .wrapper {
 
 .ouCard {
     width: 2.8181em;
-    height: 1.5454em;
+    height: 1.3636em;
     background-image: url('../images/All_Info_Organization_15_Active.png');
     background-repeat: no-repeat;
     background-position: center center;
+	padding-top:0.0909em;
 }
 
 .ouCard:hover, .ouCard:focus {
@@ -823,10 +824,12 @@ body .wrapper {
 }
 
 .ccLicense {
-    padding-left: 1.3636em;
     background-image: url('../images/cc.gif');
     background-repeat: no-repeat;
     background-position: center left;
+	padding-left: 1.4545em;
+	padding-top:0.0909em;
+	padding-bottom:0.0909em;
 }
 
 .visibilityIcon {
@@ -851,6 +854,7 @@ body .wrapper {
 	background-image: url('../images/All_File_EyeTrue_15_Static.gif');
 	background-repeat: no-repeat;
 	background-position: bottom left;
+	padding-top:0.0909em;
 	padding-left: 2.0909em !important;
 }
 
@@ -858,6 +862,7 @@ body .wrapper {
 	background-image: url('../images/All_File_ArrowDownload_15_Static.png');
 	background-repeat: no-repeat;
 	background-position: bottom left;
+	padding-top:0.0909em;
 	padding-left: 2.0909em !important;
 }  	
 
